--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-flexbox-grid": "^2.0.0",
     "react-fontawesome": "^1.6.1",
     "react-scripts": "1.0.17",
+    "react-vis-force": "^0.3.1",
     "reactbulma": "^1.1.1"
   },
   "scripts": {
