some recent changes

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy" : "npm run build&&gh-pages -d build"
+    "deploy" : "npm run build&&gh-pages -b master -d build"
   },
   "homepage": "https://vinmisra.github.io",
   "devDependencies": {
